--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -53,7 +53,8 @@ steps:
           --set-env-vars=GOOGLE_CLOUD_PROJECT=$PROJECT_ID \
           --set-env-vars=MODEL_NAME=$MODEL_NAME \
           --set-env-vars=FAST_MODEL_NAME=$FAST_MODEL_NAME \
-          --set-env-vars=DATA_STORE_ID=$DATA_STORE_ID
+          --set-env-vars=DATA_STORE_ID=$DATA_STORE_ID \
+          --set-env-vars=DOCAI_PROCESSOR_ID=$DOCAI_PROCESSOR_ID
 
   # -------------------------------------------------------------------------
   # Step 4: Build & Push Frontend
