--- a/infra/config.json
+++ b/infra/config.json
@@ -3,17 +3,18 @@
         "PROJECT_ID": "poc-project-477509",
         "REGION": "us-central1",
         "SERVICE_ACCOUNT": "sa-textbook-rag@poc-project-477509.iam.gserviceaccount.com",
-        "MODEL_NAME": "gemini-1.5-pro",
+        "MODEL_NAME": "gemini-2.0-flash",
         "FAST_MODEL_NAME": "gemini-1.5-flash",
         "DATA_STORE_ID": "textbooks-search",
-        "DB_INSTANCE_NAME": "textbook-rag-db-dev"
+        "DB_INSTANCE_NAME": "textbook-rag-db-dev",
+        "DOCAI_PROCESSOR_ID": "b8f4b3d57a243e85"
     },
     "prod": {
         "PROJECT_ID": "prod-project-placeholder",
         "REGION": "us-central1",
         "SERVICE_ACCOUNT": "sa-prod-rag@prod-project-placeholder.iam.gserviceaccount.com",
-        "MODEL_NAME": "gemini-1.5-pro",
-        "FAST_MODEL_NAME": "gemini-1.5-flash",
+        "MODEL_NAME": "gemini-2.0-flash",
+        "FAST_MODEL_NAME": "gemini-2.0-flash",
         "DATA_STORE_ID": "textbooks-search-prod",
         "DB_INSTANCE_NAME": "textbook-rag-db-prod"
     }
