--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -31,7 +31,7 @@ steps:
       - '-c'
       - |
         source workspace_env.sh
-        docker build -t gcr.io/$PROJECT_ID/rag-backend:$COMMIT_SHA ./backend
+        docker build -t gcr.io/$PROJECT_ID/rag-backend:$COMMIT_SHA -f backend/Dockerfile .
         docker push gcr.io/$PROJECT_ID/rag-backend:$COMMIT_SHA
 
   # -------------------------------------------------------------------------
