fix(backend): resolve upload failure and service account identity - Add .env support to backend/app/main.py - Fix StorageService to validate project_id and handle IAM signing permissions - Ensure correct SERVICE_ACCOUNT_EMAIL is used in StorageService - Pass SERVICE_ACCOUNT_EMAIL in cloudbuild.yaml to backend container - Add test_upload_url.py for verification

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -54,7 +54,8 @@ steps:
           --set-env-vars=MODEL_NAME=$$MODEL_NAME \
           --set-env-vars=FAST_MODEL_NAME=$$FAST_MODEL_NAME \
           --set-env-vars=DATA_STORE_ID=$$DATA_STORE_ID \
-          --set-env-vars=DOCAI_PROCESSOR_ID=$$DOCAI_PROCESSOR_ID
+          --set-env-vars=DOCAI_PROCESSOR_ID=$$DOCAI_PROCESSOR_ID \
+          --set-env-vars=SERVICE_ACCOUNT_EMAIL=$$SERVICE_ACCOUNT
 
   # -------------------------------------------------------------------------
   # Step 4: Build & Push Frontend (Bake in Backend URL)
@@ -107,3 +108,4 @@ images:
 
 options:
   logging: CLOUD_LOGGING_ONLY
+  substitution_option: 'ALLOW_LOOSE'
