--- a/infra/config.json
+++ b/infra/config.json
@@ -15,7 +15,7 @@
         "SERVICE_ACCOUNT": "sa-prod-rag@poc-project-477509.iam.gserviceaccount.com",
         "MODEL_NAME": "gemini-2.0-flash",
         "FAST_MODEL_NAME": "gemini-2.0-flash",
-        "DATA_STORE_ID": "textbooks-search-prod",
+        "DATA_STORE_ID": "textbooks-search-prod_1767337535700",
         "DB_INSTANCE_NAME": "textbook-rag-db-prod",
         "DOCAI_PROCESSOR_ID": "b8f4b3d57a243e85"
     }
